--- a/_posts/0000.01.02.scets424.md
+++ b/_posts/0000.01.02.scets424.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: _posts/0000.01.02.scets424.md
 ---
 Your text
 Use the left arrow to go back!
